# sage

./: .gitignore  Makefile  PRIVACY.md  ROADMAP.md  app.py  install-linux.txt  install-windows.txt  pyproject.toml  requirements.txt
.github/workflows/: build.yml
core/: agent.py  auth_client.py  backup.py  config.py  encryption.py  forget.py  hotkey.py  license.py  memory.py  migrate.py  milvus_memory.py  paths.py  qdrant_common.py  qdrant_memory.py  rag.py  router.py  search.py  sqlite_memory.py  vault.py
db/: sqlite.py
packaging/: generate_icon.py
packaging/linux/arch/: PKGBUILD  sage.install
packaging/linux/deb/: control.in  postinst
packaging/linux/sage.AppDir/: .DirIcon  AppRun  sage.desktop
packaging/windows/: sage.iss  sage.wxs
qdrant_storage/: raft_state.json
qdrant_storage/collections/sage_documents/: config.json
qdrant_storage/collections/sage_documents/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/sage_documents/0/segments/0067b8b5-1479-416d-b057-58e97909c02f/: mutable_id_tracker.mappings
qdrant_storage/collections/sage_documents/0/segments/23ff90bd-ccc8-4f10-8acb-eac1764ffd20/: mutable_id_tracker.mappings
qdrant_storage/collections/sage_documents/0/segments/66bae05c-72f7-4eba-9c6c-afb7cf20b89a/: mutable_id_tracker.mappings
qdrant_storage/collections/sage_documents/0/segments/e30dbae7-e891-4be6-a167-6ceb553a7f34/: segment.json  (+2 more)
tests/: test_agent_compat.py  test_backup.py  test_paths.py  test_router.py  test_startup.py
ui/: account.py  auth.py  onboarding.py  popup.py  recovery.py  settings.py  tray.py
(+2 files in other folders)
